# tamago

./: Cargo.toml
src/: hash.rs  index.rs  lib.rs  mapper.rs  sam.rs  sequence.rs  utils.rs
src/index/: rank9b.rs  suffix_array.rs
src/index/suffix_array/: fixed_length_buckets.rs  fringed.rs  hashing.rs  sa_hash.rs  variable_length_buckets.rs
src/mapper/: single.rs
