[package]
name = "tamago"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.37"
bincode = "1.3.1"
bio = "0.32.0"
bitvec = "0.20.1"
bstr = "0.2.14"
crc32fast = "1.2.1"
crossbeam-channel = "0.5.0"
hash32 = "0.2.1"
itertools = "0.10.0"
rayon = "1.5.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_bytes = "0.11.5"
sorted-list = "0.2.0"
structopt = "0.3.21"
sufsort-rs = { git = "https://github.com/srirampc/sufsort-rs.git" }
xxhash-rust = { version = "0.8.1", features = ["xxh32"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "tamago"
path = "src/bin/tamago/main.rs"
doc = false

[profile.dev]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
